--- a/servicio-item-dev.properties
+++ b/servicio-item-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando ambiente desarrollo
-configuracion.autor.nombre=Andres
+configuracion.autor.nombre=Jose
 configuracion.autor.email=josegallard88@gmail.com
